Corrected alignment for _eventsCreated.cshtml and _eventsAttended.cshtml

--- a/Events4All.Web/Content/Site.css
+++ b/Events4All.Web/Content/Site.css
@@ -262,3 +262,7 @@ a:hover, a:active, a:focus {
 /*---------------------------------------------*/
 /* End of header(nav bar) and footer styles*/
 /*---------------------------------------------*/
+
+td {
+    text-align: left;
+}
